# trimem

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  HowTo_TriLMP.md  LICENSE  README.md  clean.sh  copy_libs.sh  environment.yml  install_guide.md  install_guide.txt  lmp_build.sh  lmp_clean.sh  om-patch  ovito_h5_reader.py  pyproject.toml  sbeady_plan.txt  setup.cfg  setup.py  trilmp_h5.py
.github/workflows/: test.yml
_skbuild/linux-x86_64-3.11/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/linux-x86_64-3.11/cmake-build/OpenMesh/: CTestTestfile.cmake  OpenMeshConfig.cmake  cmake_install.cmake  openmesh.pc
_skbuild/linux-x86_64-3.11/cmake-build/OpenMesh/Doc/: CTestTestfile.cmake  cmake_install.cmake  doxy.config
_skbuild/linux-x86_64-3.11/cmake-build/OpenMesh/src/OpenMesh/Apps/: CTestTestfile.cmake  cmake_install.cmake
_skbuild/linux-x86_64-3.11/cmake-build/OpenMesh/src/OpenMesh/Core/: CTestTestfile.cmake  cmake_install.cmake
_skbuild/linux-x86_64-3.11/cmake-build/OpenMesh/src/OpenMesh/Tools/: CTestTestfile.cmake  cmake_install.cmake
_skbuild/linux-x86_64-3.11/cmake-build/src/debug/: cmake_install.cmake  testd
_skbuild/linux-x86_64-3.11/cmake-install/src/trimem/mc/: config.py
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/trimem/: testd
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/trimem/mc/: __init__.py
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/trimem/mc/output/: __init__.py
debug/: .gitignore  test_flips.py  test_gradient.py  test_mc.py  test_neighbours.py  test_output.py  test_tether.py  util.py
doc/: bib.rst  cli.rst  conf.py  config.rst  index.rst  modules.rst  python-module.rst  quick-start.rst  trimem.core.rst  trimem.mc.output.rst  trimem.mc.rst  trimem.rst  usage.rst
examples/: custom_interactions.py  hysteresis_103.py  lennard_jones.py  log.lammps  nonrec_test_trilmp.p0.h5  nonrec_test_trilmp.p1.h5  nonreciprocal.py  sim_setup.in  slurm_example.sh  test.cpt  test_trilmp.py  tether_pull.py  trilmp_srp_pot.py  trimem_srp.table
examples/nobead/: .gitignore  run.py
examples/python_lmp_test/: run.in  run.py
helfrich/: energy.py
nonrec/: pair_nonreciprocal.cpp  pair_nonreciprocal.h  pair_nonreciprocal_omp.h
nonrec/OPENMP/: pair_nonreciprocal_omp.cpp
ready_to_run_mmb/: trilmp_lj.py  trilmp_nonrec.py  trilmp_testing.py
src/: bindings.cpp  cell_list.h  defs.h  energy.cpp  energy.h  flip_utils.cpp  flip_utils.h  flips.cpp  flips.h  kernel.h  mesh.cpp  mesh.h  mesh_constraint.h  mesh_math.h  mesh_properties.cpp  mesh_properties.h  mesh_py.cpp  mesh_py.h  mesh_repulsion.h  mesh_tether.h  mesh_util.cpp  mesh_util.h  neighbour_list.h  numpy_util.h  omp_guard.cpp  omp_guard.h  params.cpp  params.h  util.cpp  util.h  verlet_list.h
src/debug/: CMakeLists.txt  test.cpp  testd
src/helfrich/: __init__.py
src/helfrich/mc/: app.py  config.py  evaluators.py  hmc.py  mesh.py  util.py
src/helfrich/mc/output/: __init__.py  _common.py  checkpoint.py  util.py  vtu.py  xdmf.py  xyz.py
src/nlists/: cell_list.h  nlist.cpp  nlist.h  verlet_list.h
src/trimem/: __init__.py  testd
src/trimem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/trimem/mc/: app.py  config.py  evaluators.py  hmc.py  mesh.py  trilmp.py  trilmp_h5.py  trilmp_srp_pot.py  trisim.py  util.py
src/trimem/mc/output/: _common.py  checkpoint.py  util.py  vtu.py  xdmf.py  xyz.py
tests/: test_dihedral_angle.py  test_energy.py  test_flips.py  test_gradient.py  test_integration.py  test_move.py  test_neighbours.py  test_output.py  test_properties.py  test_random.py  test_sampling.py  test_vol.py  util.py
triangulatedmesh_ccode/: DataStructures.h  Functions.h  PreprocessorDeclarations.h  main.c
trimem.egg-info/: SOURCES.txt  top_level.txt
