[metadata]
name = trimem
description = Tools for the simulation of lipid membranes according to the Helfrich theory
author = Trimem Team
license = GPLv3

[options]
install_requires =
    numpy
    scipy
    h5py
    meshio
    trimesh
    omp_thread_count

[options.extras_require]
tests = pytest; autograd; trimesh
docs = sphinx; sphinx-copybutton; sphinxcontrib-programoutput
