[metadata]
name = trimem
description = Tools for the simulation of lipid membranes according to the Helfrich theory
author = Trimem Team
license = GPLv3

[options]
install_requires =
    numpy
    scipy
    h5py
    meshio
    trimesh
    psutil

[options.extras_require]
tests = pytest; autograd; trimesh
docs = sphinx; sphinx-copybutton; sphinxcontrib-programoutput
